Terraform_apache/sg.tf
resource "aws_security_group" "apache" {
  name   = "Allow SSH and network traffic"
  vpc_id = "vpc-0e91d041ce7c92c5c"

  ingress {
    description = "SSH from IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["35.145.180.2/32"]
  }

  ingress {
    description = "HTTP Traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_traffic"
  }
}
